creation of requests for menu collection
