# backend/routes/index.js
@@ -1,9 +1,10 @@
 const router = require('express').Router();
 const reviews = require('./reviews');
-// const menu = require('./menu');
+const menu = require('./menu');
 // const users = require('./users');
 
 router.use('/reviews', reviews);
+router.use('/menu', menu);
 router.use('/', (req, res) => {
   let info = {
     github: 'https://github.com/RodBuild/Backend-Dev;',
